--- a/app/views/listings/_listing_actions.haml
+++ b/app/views/listings/_listing_actions.haml
@@ -72,12 +72,13 @@
         - if delivery_opts.count == 1
           .row
             .col-12
+              = hidden_field_tag(:delivery, delivery_opts.first.fetch(:name))
               = t("listings.show.#{delivery_opts.first.fetch(:name)}", price: humanized_money_with_symbol(delivery_opts.first.fetch(:price)).upcase)
         - else
           - delivery_opts.each do |opts|
             .row
               .col-12
-                = radio_button_tag("delivery", opts.fetch(:name), opts[:default])
+                = radio_button_tag(:delivery, opts.fetch(:name), opts[:default])
                 = label_tag("delivery_#{opts.fetch(:name)}", t("listings.show.#{opts.fetch(:name)}", price: humanized_money_with_symbol(opts.fetch(:price)).upcase), class: "delivery-label")
 
       %button.book-button
